[package]
name = "tzbuildasset"
description = "Trainz asset builder"
repository = "https://github.com/agmike/tzbuildasset"
license = "MIT"
version = "0.1.0"
authors = ["Mike Krasnenkov <mkrasnenkov@gmail.com>"]

[dependencies]
docopt = "*"
lazy_static = "*"
regex = "*"
rustc-serialize = "*"
tempdir = "0.3"
